trunk/Archive2/75/24fe06f22f933b/output
main.cpp:30:18: error: explicit specialization in non-namespace scope 'class B'
         template<>
                  ^
main.cpp:33:18: error: explicit specialization in non-namespace scope 'class B'
         template<>
                  ^
